# rust-wasm-sdl2-template

./: Cargo.toml  LICENSE  README.md  index.html
.cargo/: config.toml
src/: main.rs
